--- a/css/styles.css
+++ b/css/styles.css
@@ -893,6 +893,11 @@ header{
     color: #F4BD67;
 }
 
+.contact a{
+    color: #F4BD67;
+}
+
+
 .contact_icons img {
     width: 24px;
     height: 24px;
