--- a/css/catalysts.css
+++ b/css/catalysts.css
@@ -12,6 +12,10 @@
 
 body{
     background-color: #111111;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 header{
@@ -74,7 +78,6 @@ header img{
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    background-color: #111111;
     padding-top: 98px;
 }
 
@@ -279,6 +282,7 @@ header img{
     align-items: center;
     flex-wrap: wrap;
     margin: 20px 0;
+    max-width: 500px;
 }
 
 .pagination button {
