--- a/css/styles.css
+++ b/css/styles.css
@@ -200,7 +200,7 @@ header{
     font-size: 16px;
     cursor: pointer;
     transition: .4s;
-    box-shadow: 5px 5px 20px #000, -5px -5px 20px #000;
+    box-shadow: 5px 0 10px #080808, -5px 0 10px #080808;
     letter-spacing: 2px;
 }
 
