--- a/css/catalysts.css
+++ b/css/catalysts.css
@@ -92,7 +92,7 @@ header img{
 .catalysts_card{    
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: flex-start;
     flex-direction: column;
     width: 265px;
     height: 364px;
@@ -106,7 +106,8 @@ header img{
 .catalysts_card img{
     width: 130px;
     height: 130px;
-    margin-top: 10px;
+    margin-top: 20px;
+    border-radius: 10px;
 }
 
 .catalysts_card h4{
@@ -145,7 +146,7 @@ header img{
 
 @media(max-width: 1025px){
     .catalysts_card{
-        margin: 30px ;
+        margin: 30px;
     }
 }
 
@@ -207,8 +208,9 @@ header img{
 
 .product-details-1 img{
     margin-left: 100px;
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
+    border-radius: 10px;
 }
 
 .product-details-2{
