--- a/css/styles.css
+++ b/css/styles.css
@@ -186,8 +186,9 @@ header{
 }
 
 .banner_text img{
-    width: 450px;
-    height: 350px;
+    width: 530px;
+    height: 430px;
+    object-fit: cover;
     margin: 80px 0 60px 0;
 }
 
